--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webui-app",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://owicky.github.io/faasr-workflow-builder",
   "dependencies": {
     "@dagrejs/dagre": "^1.1.4",
