--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@xyflow/react": "^12.6.0",
+    "axios": "^1.11.0",
     "is-my-json-valid": "^2.20.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
